[project]
name = "vapi-voice-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<0.35",
    "streamlit>=1.30,<2.0",
    "requests>=2.31,<3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
